--- a/paper/references.bib
+++ b/paper/references.bib
@@ -355,19 +355,63 @@
 }
 
 @book{griewank2008evaluating,
-  title={Evaluating derivatives: principles and techniques of algorithmic differentiation},
-  author={Griewank, Andreas and Walther, Andrea},
-  year={2008},
-  publisher={SIAM}
+  title =        {Evaluating derivatives: principles and techniques of
+                  algorithmic differentiation},
+  author =       {Griewank, Andreas and Walther, Andrea},
+  year =         2008,
+  publisher =    {SIAM}
 }
 
 @article{griewank1996algorithm,
-  title={Algorithm 755: ADOL-C: A package for the automatic differentiation of algorithms written in C/C++},
-  author={Griewank, Andreas and Juedes, David and Utke, Jean},
-  journal={ACM Transactions on Mathematical Software (TOMS)},
-  volume={22},
-  number={2},
-  pages={131--167},
-  year={1996},
-  publisher={ACM New York, NY, USA}
+  title =        {Algorithm 755: ADOL-C: A package for the automatic
+                  differentiation of algorithms written in C/C++},
+  author =       {Griewank, Andreas and Juedes, David and Utke, Jean},
+  journal =      {ACM Transactions on Mathematical Software (TOMS)},
+  volume =       22,
+  number =       2,
+  pages =        {131--167},
+  year =         1996,
+  publisher =    {ACM New York, NY, USA}
+}
+
+@inproceedings{benzing2022gradient,
+  title =        {Gradient Descent on Neurons and its Link to Approximate
+                  Second-order Optimization},
+  author =       {Benzing, Frederik},
+  booktitle =    {International Conference on Machine Learning (ICML)},
+  year =         2022,
+}
+
+@inproceedings{petersen2023isaac,
+  title =        {{ISAAC} Newton: Input-based Approximate Curvature for Newton's
+                  Method},
+  author =       {Felix Petersen and Tobias Sutter and Christian Borgelt and
+                  Dongsung Huh and Hilde Kuehne and Yuekai Sun and Oliver
+                  Deussen},
+  booktitle =    {International Conference on Learning Representations (ICLR)},
+  year =         2023,
+}
+
+@article{lin2023simplifying,
+  title =        {Simplifying Momentum-based Riemannian Submanifold
+                  Optimization},
+  author =       {Lin, Wu and Duruisseaux, Valentin and Leok, Melvin and
+                  Nielsen, Frank and Khan, Mohammad Emtiyaz and Schmidt, Mark},
+  year =         2023
+}
+
+@article{lin2023structured,
+  title =        {Structured Inverse-Free Natural Gradient: Memory-Efficient \&
+                  Numerically-Stable KFAC for Large Neural Nets},
+  author =       {Lin, Wu and Dangel, Felix and Eschenhagen, Runa and Neklyudov,
+                  Kirill and Kristiadi, Agustinus and Turner, Richard E and
+                  Makhzani, Alireza},
+  year =         2023,
+}
+
+@inproceedings{dangel2020backpack,
+  title =        {{B}ack{PACK}: Packing more into Backprop},
+  author =       {Felix Dangel and Frederik Kunstner and Philipp Hennig},
+  booktitle =    {International Conference on Learning Representations (ICLR)},
+  year =         2020,
 }
