Update on Overleaf.

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -43,13 +43,13 @@
 \input{sections/background_engd.tex}
 \input{sections/background_kfac.tex}
 
-\section{Kronecker-factored Approximate Gramians for PINNs}
+\section{Kronecker-factored Approximate Gauß-Newton Methods for PINNs}
+
+
 \input{sections/contribution.tex}
 
-\section{Generalization to other PDEs}
-\input{sections/generalization.tex}
-
 \section{Experiments}
+
 \input{sections/experiments.tex}
 
 \section{Conclusion}
