--- a/paper/preamble/metadata.tex
+++ b/paper/preamble/metadata.tex
@@ -1,5 +1,5 @@
 \newcommand{\papertitle}{%
-  Kronecker-factored Approximate Curvature for Energy Natural Gradient Descent in PINNs
+  Kronecker-factored Approximate Gauß-Newton method in PINNs 
 }
 \title{\papertitle}
 
