--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -6,7 +6,7 @@
     \item next steps: modular code
 \end{itemize}
 
-\subsection{A two-dimensional Poisson equation}
+\subsection{The Poisson equation}
 
 \subsection{asdf}
 
